# perplexity-clone

./: .env  agent.ipynb  check_env.py  error_log.txt  main.py  pyproject.toml  run_agent.py  verify_search.py
Backend/: agent.ipynb  agent.py  discover.py  finance.py  image_handler.py  main.py
frontend/: build_log_2.txt  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/discover/: page.tsx
frontend/src/app/finance/: page.tsx
frontend/src/components/: SearchBar.tsx  Sidebar.tsx  ThreadView.tsx
